<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="layout/row_layout_quotes_0">


    <androidx.cardview.widget.CardView
        android:id="@+id/quotes_card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10.0dip"
        app:cardElevation="5.0dip">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/layout_quote_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgIcon"
                    android:layout_width="50.0dip"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/app_name"
                    android:padding="10.0dip"
                    android:src="@drawable/ic_menu_quote"
                    android:tint="@android:color/black" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5.0dip"
                    android:text="@string/app_name"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <com.kwesiwelbred.getinspire.SquareRelativeLayout
                android:id="@+id/layout_quotes_parent_view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout_quote_header">


                <LinearLayout
                    android:id="@+id/layout_quotes_parent_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_quote_header"
                    android:background="@android:color/black"
                    android:gravity="center"
                    android:visibility="visible">

                    <RelativeLayout
                        android:id="@+id/llBackground"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#7F000000" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_above="@+id/txtQuote"
                            android:layout_marginStart="15dp"
                            android:contentDescription="@string/library_roundedimageview_author"
                            android:src="@drawable/ic_menu_quote" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtQuote"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="42dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="42dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="center"
                            android:hint="@string/get_inspire"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@android:color/white" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/txtQuote"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="15dp"
                            android:contentDescription="@string/close_quote"
                            android:rotation="180"
                            android:src="@drawable/ic_menu_quote" />

                        <TextView
                            android:id="@+id/tv_quotes_watermark"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@android:color/white"
                            android:textSize="12.0sp"
                            android:visibility="invisible" />

                    </RelativeLayout>

                </LinearLayout>

            </com.kwesiwelbred.getinspire.SquareRelativeLayout>


            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_below="@+id/layout_quotes_parent_view2"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator"
                android:layout_marginEnd="10.0dip"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_quote_like"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.like.LikeButton
                        android:id="@+id/favBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:anim_scale_factor="2"
                        app:circle_end_color="@color/dot2"
                        app:circle_start_color="@color/dot1"
                        app:dots_primary_color="@color/dot1"
                        app:dots_secondary_color="@color/dot3"
                        app:icon_size="25dp"
                        app:icon_type="heart"
                        app:like_drawable="@drawable/ic_favorite_red"
                        app:unlike_drawable="@drawable/ic_favorite_black" />


                    <TextView
                        android:id="@+id/tv_like_quote_text"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/like" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_quote_save"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_save_quote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4.0dip"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_menu_save"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/tv_save_quote"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/save" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_copy_quote"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4.0dip"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_menu_copy"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/copy" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_quote_share"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4.0dip"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_menu_share"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/share" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
